--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "devDependencies": {
     "grunt": "~0.4.3",
-    "grunt-assemble": "",
+    "grunt-assemble": "^0.4.0",
     "grunt-autoprefixer": "",
-    "grunt-browserify": "",
+    "grunt-browserify": "^4.0.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-livereload": "~0.1.2",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "~0.5.2",
